# sdvx-con

./: .gitignore  CMakeLists.txt  flake.nix  sdvx.c  shell.nix
src/: CMakeLists.txt  board_defs.h  button.c  button.h  cli.c  cli.h  sdvx.c  usb_descriptors.c
